--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,13 @@ python:
 install:
     - git clone https://github.com/Tsjerk/simopt.git && pip install ./simopt
     - pip install ./
-    - pip install nose coverage mock
+    - pip install nose coverage mock codecov
 script:
     - |
         cd tests \
         && python run_tests.py -v --with-coverage --cover-package=insane
+after_success:
+    - codecov
 jobs:
     include:
        - stage: package
